# CMake

./: README.md
shared_lib/: CMakeLists.txt  clean.sh
shared_lib/inc/: mylib.h
shared_lib/src/: mylib.cpp
simple_app/: CMakeLists.txt  clean.sh
use_shared_lib_app/: CMakeLists.txt  build.sh  clean.sh
use_shared_lib_app/src/: main.cpp
